# django-user-trace

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENCE.txt  README.md  SECURITY.md  manage.py  mkdocs.yml  pyproject.toml  versions.json
.github/: release-please.json
.github/workflows/: docs.yml  lint.yml  release-1.x.yml  release.yml  test.yml
1.0/: 404.html  index.html
1.0/changelog/: index.html
1.0/contributing/: index.html
1.0/contributing/reporting-a-vulnerability/: index.html
1.1/: 404.html  index.html
1.1/changelog/: index.html
1.1/contributing/: index.html
1.1/getting-started/setup/: index.html
1.1/integrations/: index.html
1.1/integrations/celery/: index.html
2.0/: index.html
2.0/changelog/: index.html
2.0/changelog/how-to-upgrade/: index.html
2.0/contributing/reporting-a-vulnerability/: index.html
2.0/getting-started/configuration/: index.html
2.0/getting-started/setup/: index.html
2.0/integrations/: index.html
2.1/: 404.html  index.html
2.1/changelog/: index.html
2.1/contributing/: index.html
2.1/contributing/reporting-a-vulnerability/: index.html
2.1/getting-started/asgi/: index.html
2.1/getting-started/installation/: index.html
2.2/: 404.html
2.2/changelog/: index.html
2.2/changelog/how-to-upgrade/: index.html
2.2/contributing/: index.html
2.2/contributing/reporting-a-vulnerability/: index.html
2.2/getting-started/installation/: index.html
2.2/integrations/celery/: index.html
2.2/search/: search_index.json
dev/: 404.html  index.html
dev/changelog/: index.html  index.py
dev/changelog/how-to-upgrade/: index.html
dev/contributing/: index.html
dev/contributing/reporting-a-vulnerability/: index.html
dev/getting-started/asgi/: index.html
dev/getting-started/configuration/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/setup/: index.html
dev/integrations/: index.html
dev/integrations/celery/: index.html
dev/search/: search_index.json
docs/: .pages.yml  index.md
docs/changelog/: .pages.yml  how-to-upgrade.md  index.md  index.py
docs/contributing/: .pages.yml  index.md  reporting-a-vulnerability.md
docs/getting-started/: .pages.yml  asgi.md  configuration.md  installation.md  setup.md
docs/integrations/: .pages.yml  celery.md  index.md
example/: asgi.py  celery.py  consumers.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
latest/changelog/how-to-upgrade/: index.html
latest/contributing/reporting-a-vulnerability/: index.html
latest/getting-started/asgi/: index.html
latest/getting-started/configuration/: index.html
latest/getting-started/setup/: index.html
latest/integrations/: index.html
latest/integrations/celery/: index.html
src/django_user_log/: apps.py  conf.py  context.py  log.py  middleware.py  signals.py  utils.py
src/django_user_trace/: apps.py  asgi.py  conf.py  context.py  log.py  middleware.py  signals.py  utils.py
src/django_user_trace/contrib/celery/: apps.py  signals.py
tests/feature/: test_asgi_request.py  test_async_request.py  test_conf.py  test_sync_request.py
tests/feature/contrib/celery/: conftest.py  test_conf.py  test_task.py
tests/unit/: test_asgi.py  test_conf.py  test_context.py  test_middleware.py  test_signals.py  test_utils.py
tests/unit/contrib/celery/: conftest.py  test_signals.py
