[tool.poetry]
name = "django-user-trace"
version = "1.0.0"
description = "A Python logging filter for Django user attributes."
license = "MIT"
authors = ["Jonathan Hiles <jonathan@hil.es>"]
readme = "README.md"
repository = "https://github.com/axieum/django-user-trace"
documentation = "https://axieum.github.io/django-user-trace/latest/"
keywords = ["async", "django", "logs", "logging", "middleware", "sync", "trace", "tracing", "user", "web"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
packages = [{ include = "django_user_trace", from = "src" }]
include = [{ path = "tests", format = "sdist" }]

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/axieum"
"Issue tracker" = "https://github.com/axieum/django-user-trace/issues"
"Release notes" = "https://axieum.github.io/django-user-trace/latest/changelog/"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0 | ^4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-xdist = "^3.1.0"
syrupy = "^3.0.5"

[tool.poetry.group.typing.dependencies]
mypy = ">=0.990"
django-stubs = "^1.13.1"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mike = "^1.1.2"
mkdocs = "^1.4.2"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-material = "^9.0.9"
mkdocs-minify-plugin = "^0.6.2"

[tool.black]
target-version = ["py38"]
line-length = 120

[tool.isort]
py_version = 38
profile = "black"
src_paths = ["src", "tests"]
combine_as_imports = true

[tool.mypy]
files = ["src", "tests"]
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "example.settings"

[tool.pytest.ini_options]
addopts = "-n auto"
asyncio_mode = "auto"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "example.settings"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
